NEH bugfix