@@ -2,26 +2,28 @@ package org.combinators.cls.scheduling.algorithms;
 
 import org.combinators.cls.scheduling.model.Job;
 import org.combinators.cls.scheduling.model.Machine;
-import org.combinators.cls.scheduling.model.Stage;
 import org.combinators.cls.scheduling.model.Task;
 import org.combinators.cls.scheduling.utils.ClassificationUtils;
 
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.List;
+import java.util.LinkedList;
 import java.util.Map;
 import java.util.function.Function;
 
 
 public class NEH implements Function<ClassificationUtils.Classification, Task> {
 	public Task apply(ClassificationUtils.Classification classification) {
-		final List<Job> jobs = classification.getTask().getJobs();
+		final LinkedList<Job> jobs = classification.getTask().getJobs();
 		
 		//sort jobs in descending order
-		jobs.sort(Comparator.comparingInt(job -> -job.getRoutes().get(0).getStages().stream().mapToInt(Stage::getDuration).sum()));
+		jobs.sort(Comparator.comparingInt(job -> -job.getRoutes().getFirst().getStages().stream().mapToInt(stage -> stage.getScheduledMachine().getDuration()).sum()));
 		
+		//initialize local schedule with first job (the job with the longest makespan)
 		Task schedule = new Task();
 		schedule.add(jobs.remove(0));
+		
+		//schedule each job in the List
 		for(Job job : jobs) {
 			int localCmax = Integer.MAX_VALUE;
 			Task localTask = new Task();
@@ -35,16 +37,21 @@ public class NEH implements Function<ClassificationUtils.Classification, Task> {
 				/* ########## FLOWSHOP SCHEDULER MODULE ########## */
 				Task localSchedule = jobList.cloned();
 				Map<Machine, Integer> machineWorkingUntil = new HashMap<>();
-				localSchedule.getAllMachines().forEach(machine -> machineWorkingUntil.put(machine, 0));
+				localSchedule.getJobs().getFirst().getMachines().forEach(machine -> machineWorkingUntil.put(machine, 0));
 				
-				for(Job jobIndex : localSchedule.getJobs()) {
-					for(int machineIndex = 0; machineIndex < jobIndex.getRoutes().get(0).getStages().size(); machineIndex++) {
-						Stage stage = jobIndex.getRoutes().get(0).getStages().get(machineIndex);
-						int t1 = machineIndex == 0 ? 0 : jobIndex.getRoutes().get(0).getStages().get(machineIndex - 1).getFinishTime();
-						int t2 = machineWorkingUntil.get(stage.getMachines().get(0));
+				for(Job jobToSchedule : localSchedule.getJobs()) {
+					for(int machineIndex = 0; machineIndex < jobToSchedule.getScheduledRoute().getStages().size(); machineIndex++) {
+						Machine machine = jobToSchedule.getScheduledRoute().getStages().get(machineIndex).getScheduledMachine();
+						
+						//finishtime of job
+						int t1 = machineIndex == 0 ? 0 : jobToSchedule.getScheduledRoute().getStages().get(machineIndex - 1).getScheduledMachine().getFinishTime();
+						
+						//finishtime of machine
+						int t2 = machineWorkingUntil.get(machine);
 						int scheduleTime = Math.max(t1, t2);
-						stage.setScheduledTime(scheduleTime);
-						machineWorkingUntil.put(stage.getMachines().get(0), scheduleTime);
+						
+						machine.setScheduledTime(scheduleTime);
+						machineWorkingUntil.put(machine, machine.getFinishTime());
 					}
 				}
 				/* ########## ########## ########## ########## */
@@ -60,6 +67,7 @@ public class NEH implements Function<ClassificationUtils.Classification, Task> {
 			schedule = localTask;
 		}
 		schedule.setResult(schedule.getMakespan());
+		
 		return schedule;
 	}
 }
